
MASTER

* Changing add_limit! in ActiveRecord::Base for SQLServer so that it passes through any scoped :order 
  parameters. Resolves ticket #35 [Murray Steele]


* 2.2.18 * (June 5th, 2009)

* Column reflection on table name rescues LoadError and a few others. Resolves tickets #25 & #33 [Ken Collins]

* Added 2008 support. Resolves ticket #32 [Ken Collins]


* 2.2.17 * (May 14th, 2009)

* Add simplified type recognition for varchar(max) and nvarchar(max) under SQL Server 2005 to be a 
  :text type. This ensures schema dumper does the right thing. Fixes ticket #30. [Ken Collins]

* Tested ruby 1.9, ruby-odbc 0.9996, and DBI 0.4.1. Also added correct support for UTF-8 character 
  encoding going in and out of the DB. See before gist http://gist.github.com/111709 and after gist 
  http://gist.github.com/111719 [Ken Collins]


* 2.2.16 * (April 21st, 2009)

* Make add_limit_offset! only add locking hints (for tally) when the :lock option is present. Added tests 
  to make sure tally SQL is augmented correctly and tests to make sure that add_lock! is doing what it needs 
  for deep sub selects in paginated results. [Ken Collins]

* Add auto reconnect support utilizing a new #with_auto_reconnect block. By default each query run through 
  the adapter will automatically reconnect at standard intervals, logging attempts along the way, till success 
  or the original exception bubbles up. See docs for more details. Resolves ticket #18 [Ken Collins] 

* Update internal helper method #orders_and_dirs_set to cope with an order clause like "description desc". This 
  resolves ticket #26 [Ken Collins]

* Provide support for running queries at different isolation levels using #run_with_isolation_level method 
  that can take a block or not. Also implement a #user_options method that reflects on the current user 
  session values. Resolves #20 [Murray Steele]


* 2.2.15 * (March 23rd, 2009)
